# avantages-sportifs

./: .dockerignore  .gitignore  README.md  docker-compose yml.example  docker-compose.yml  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker-build.yml
data/: activites_init.csv  commute_modes.csv  params.csv  sports.csv
docker/: Dockerfile
kestra/: flow_ingestion.yml  flow_inggestion.yml  flow_params.yml
scripts/: calculs.py  cleaning.py  google_maps.py  ingestion.py  params_ingestion.py  quality_tests_clean.py  quality_tests_raw.py  slack.py  strava_generator.py
sql/: init_config.sql  init_schema.sql
