[project]
name = "avantages-sportifs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "great-expectations==0.18.19",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
